--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lazy.js": "^0.4.0",
     "moment": "^2.9.0",
     "mousetrap": "^1.4.6",
+    "mustache": "^2.3.0",
     "object-path": "^0.9.2",
     "react": "^0.13.2",
     "react-ace": "^3.1.0",
