--- a/resources/marathon-ui.nginx.conf
+++ b/resources/marathon-ui.nginx.conf
@@ -38,6 +38,11 @@ http {
       index index.html;
     }
 
+    location /runtimeConfig.js {
+      alias /usr/share/nginx/html;
+      index runtimeConfig.js;
+    }
+
     location ~ /v2/(.+) {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
