--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,79 +2,94 @@ version: '2'
 
 services:
   zookeeper:
-    image: zookeeper:3.4.9
+    image: zookeeper:3.4.11
     hostname: zookeeper
     ports:
       - "2181:2181"
+    networks:
+      app_net:
+        ipv4_address: 172.16.121.2
+
   mesos-master:
-    image: mesosphere/mesos-master:1.1.0-2.0.107.ubuntu1404
-    hostname: mesos-master
-    entrypoint: [ "mesos-master" ]
+    image: mesosphere/mesos-master:1.4.1
+    hostname: localhost
     ports:
       - "5050:5050"
+    networks:
+      app_net:
+        ipv4_address: 172.16.121.3
     links:
       - zookeeper
+    depends_on:
+      - zookeeper
     environment:
-      - MESOS_CLUSTER=local
-      - MESOS_HOSTNAME=mesos-master.docker
-      - MESOS_LOG_DIR=/var/log
-      - MESOS_QUORUM=1
-      - MESOS_WORK_DIR=/var/lib/mesos
-      - MESOS_ROLES=public
-      - MESOS_ZK=zk://zookeeper:2181/mesos
-      - MESOS_ACLS=file:///mesos-config/acls
-      - MESOS_CREDENTIALS=file:///mesos-config/credentials
-    volumes:
-      - ./resources/mesos-config:/mesos-config
+      MESOS_ZK: zk://zookeeper:2181/mesos
+      MESOS_QUORUM: 1
+      MESOS_CLUSTER: docker-compose
+      MESOS_HOSTNAME: localhost
+      MESOS_WORK_DIR: /var/tmp/mesos
+      MESOS_LOG_DIR: /var/log/mesos
+      LIBPROCESS_IP: 172.16.121.3
+
   mesos-slave:
-    image: mesosphere/mesos-slave:1.1.0-2.0.107.ubuntu1404
-    entrypoint:
-      - mesos-slave
+    image: mesosphere/mesos-slave:1.4.1
     privileged: true
-    hostname: mesos-slave
+    hostname: localhost
     ports:
       - "5051:5051"
+    networks:
+      app_net:
+        ipv4_address: 172.16.121.4
     links:
+      - zookeeper:zookeeper
+      - mesos-master:master.mesos
+    depends_on:
       - zookeeper
       - mesos-master
     environment:
-      - MESOS_CONTAINERIZERS=mesos,docker
-      - MESOS_ISOLATOR=cgroups/cpu, cgroups/mem, filesystem/linux, docker/runtime
-      - MESOS_LOG_DIR=var/log
-      - MESOS_MASTER=zk://zookeeper:2181/mesos
-      - MESOS_PORT=5051
-      - MESOS_WORK_DIR=/var/lib/mesos
-      - MESOS_EXECUTOR_REGISTRATION_TIMEOUT=5mins
-      - MESOS_EXECUTOR_SHUTDOWN_GRACE_PERIOD=90secs
-      - MESOS_DOCKER_STOP_TIMEOUT=60secs
-      - MESOS_RESOURCES=cpus:4;mem:1280;disk:25600;ports(*):[12000-12999]
+      MESOS_MASTER: zk://zookeeper:2181/mesos
+      MESOS_CONTAINERIZERS: mesos,docker
+      MESOS_PORT: 5051
+      MESOS_RESOURCES: ports(*):[11000-11999]
+      MESOS_HOSTNAME: localhost
+      MESOS_WORK_DIR: /var/tmp/mesos
+      MESOS_LOG_DIR: /var/log/mesos
+      MESOS_SYSTEMD_ENABLE_SUPPORT: "false"
+      MESOS_FRAMEWORKS_HOME: /var/tmp/mesos/frameworks
+      MESOS_IMAGE_PROVIDERS: docker
+      MESOS_ISOLATION: filesystem/linux,docker/runtime
+      LIBPROCESS_IP: 172.16.121.4
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
   marathon-service:
-    image: mesosphere/marathon:latest
-    expose:
-      - "8080"
+    image: mesosphere/marathon:v1.5.5
+    ports:
+      - "8080:8080"
+    hostname: localhost
+    networks:
+      app_net:
+        ipv4_address: 172.16.121.5
     links:
       - zookeeper
       - mesos-master
+    depends_on:
+      - zookeeper
+      - mesos-master
+      - mesos-slave
     environment:
       - MARATHON_ZK=zk://zookeeper:2181/marathon
       - MARATHON_MASTER=zk://zookeeper:2181/mesos
-      - MARATHON_DECLINE_OFFER_DURATION=3600000
-      - MARATHON_PLUGIN_DIR=/plugins
-      - MARATHON_PLUGIN_CONF=/plugin-conf.json
-      - MARATHON_MESOS_AUTHENTICATION_PRINCIPAL=marathon
-      - MARATHON_MESOS_AUTHENTICATION_SECRET_FILE=/marathon.secret
-      - MARATHON_MESOS_ROLE=public
-    volumes:
-      - ./resources/marathon-plugins:/plugins
-      - ./resources/marathon.plugin-conf.json:/plugin-conf.json
-      - ./resources/marathon.secret:/marathon.secret
+      - LIBPROCESS_IP=172.16.121.5
+
   marathon-ui:
     image: nginx:latest
-    hostname: marathon-ui
+    hostname: localhost
     ports:
-     - "8080:8080"
+     - "8081:8080"
+    networks:
+      app_net:
+        ipv4_address: 172.16.121.6
     links:
       - marathon-service
     environment:
@@ -83,11 +98,22 @@ services:
       - ./resources/marathon-ui.nginx.conf:/etc/nginx/nginx.conf
       - dist:/usr/share/nginx/html
       - ./src/js/config/runtimeConfig.js:/usr/share/nginx/html/runtimeConfig.js
+
   develop-environment:
     build:
         context: .
     volumes:
       - ./src:/opt/marathon-ui/src
       - dist:/opt/marathon-ui/dist
+
 volumes:
   dist: {}
+
+networks:
+  app_net:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+      -
+        subnet: 172.16.121.0/24
