--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,15 +96,24 @@ services:
       - DNSDOCK_ALIAS=marathon.docker
     volumes:
       - ./resources/marathon-ui.nginx.conf:/etc/nginx/nginx.conf
-      - dist:/usr/share/nginx/html
+      - ./dist:/usr/share/nginx/html
       - ./src/js/config/runtimeConfig.js:/usr/share/nginx/html/runtimeConfig.js
 
   develop-environment:
+    hostname: localhost
+    networks:
+      app_net:
+        ipv4_address: 172.16.121.7
+    links:
+      - marathon-service
+    environment:
+      - DNSDOCK_ALIAS=marathon.docker
     build:
         context: .
     volumes:
       - ./src:/opt/marathon-ui/src
       - dist:/opt/marathon-ui/dist
+      - ./src/js/config/runtimeConfig.js:/opt/marathon-ui/dist/runtimeConfig.js
 
 volumes:
   dist: {}
