--- a/resources/marathon-ui.nginx.conf
+++ b/resources/marathon-ui.nginx.conf
@@ -29,6 +29,9 @@ http {
   upstream api {
     server marathon-service:8080;
   }
+  upstream develop {
+    server develop-environment:4200;
+  }
 
   server {
     listen 8080;
@@ -58,6 +61,16 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-NginX-Proxy true;
       proxy_pass http://api;
+      proxy_ssl_session_reuse off;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+    }
+
+    location ~ /dev/(.*) {
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_pass http://develop/$1;
       proxy_ssl_session_reuse off;
       proxy_set_header Host $http_host;
       proxy_redirect off;
