--- a/resources/marathon-ui.nginx.conf
+++ b/resources/marathon-ui.nginx.conf
@@ -30,7 +30,7 @@ http {
     server marathon-service:8080;
   }
   upstream develop {
-    server develop-environment:4200;
+    server devenv:3000;
   }
 
   server {
