--- a/resources/marathon-ui.nginx.conf
+++ b/resources/marathon-ui.nginx.conf
@@ -75,6 +75,15 @@ http {
       proxy_set_header Host $http_host;
       proxy_redirect off;
     }
+    location ~ /browser-sync/(.*) {
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_pass http://develop/$1;
+      proxy_ssl_session_reuse off;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+    }
 
   }
 
