Use npm install instead of ci
Apparently npm ci does not exist in this version of npm

Change-Id: Iacdd0612c9cfb69dca5f7ad12f73852a4290857e

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
       - name: install gulp
         run: npm install -g gulp
       - name: install
-        run: npm ci
+        run: npm install
       - name: build dist
         run: npm run dist
       - name: Get the version
