--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm run dist
       - name: Get the version
         id: get_version
-        run: echo ::set-output name=TAG::${GITHUB_REF/refs\/tags\//}
+        run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
       - name: prepare deploy
         run: cd dist && zip -r marathon-ui-$TAG.zip .
         env:
