Correct trigger condition
Change-Id: I8f8b15a3b0971ab04d2a6240af23a33eb29fd436

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,5 @@
 name: PostSubmit
-on:
-  push:
-    branches:
-      - main
-      - master
-      - criteo
-  tags:
+on: tags
 jobs:
   publish:
     name: Publish
